"Energy function implementation"

--- a/DiscreteHopfield/progress.ipynb
+++ b/DiscreteHopfield/progress.ipynb
@@ -22,6 +22,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 22 October 2024\n",
+    "- Completed the weighted sum function from the original equation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
