"basic model implemented"

--- a/DiscreteHopfield/progress.ipynb
+++ b/DiscreteHopfield/progress.ipynb
@@ -4,24 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7th October 2024\n",
-    "- Bare bone Structure\n",
-    "- Neuron Update function"
+    "# 7th October 2024\n",
+    "- Bare bone Structure.\n",
+    "- Neuron Update function."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 18Th October 2024\n",
+    "# 18Th October 2024\n",
     "- Hebbian Learning rule **(Information Storage algorithm)**\n",
-    "- understood the intuition and working of it"
+    "- Understood the intuition and working of it."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -30,6 +25,44 @@
     "# 22 October 2024\n",
     "- Completed the weighted sum function from the original equation\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 Decemeber 2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Recall function implemented \n",
+    "- Energy function implemented\n",
+    "- Working model implemented **(without energy calculation)** \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
